--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
-  "name": "essenceserver",
-  "version": "1.0.0",
-  "description": "backend",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dmarselus/essenceServer.git"
-  },
-  "keywords": [
-    "server",
-    "essence",
-    "node",
-    "rest",
-    "api"
-  ],
-  "author": "david marselus",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dmarselus/essenceServer/issues"
-  },
-  "homepage": "https://github.com/dmarselus/essenceServer#readme",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.8.7"
-  }
+	"name": "essenceserver",
+	"version": "1.0.0",
+	"description": "backend",
+	"main": "index.js",
+	"scripts": {
+		"start": "node server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/dmarselus/essenceServer.git"
+	},
+	"keywords": [ "server", "essence", "node", "rest", "api" ],
+	"author": "david marselus",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/dmarselus/essenceServer/issues"
+	},
+	"homepage": "https://github.com/dmarselus/essenceServer#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.8.7"
+	}
 }
